fixed the alignment of the publications

--- a/src/pages/publications.module.css
+++ b/src/pages/publications.module.css
@@ -21,10 +21,10 @@
 .yearSection {
   margin: 2rem;
   font-size: 20px;
+  text-align: start;
 }
 
 .yearTitle {
-  margin: 2rem;
   margin-top: 3rem;
   margin-bottom: 3rem;
   font-size: 35px;
@@ -36,37 +36,37 @@
   font-size: 22px;
 }
 
-.publicationItem {
-  display: flex;
-  align-items: center;
-  padding-bottom: 20px;
-  margin: 1rem;
-  font-size: 18px;
-}
+
 .publicationItem2 {
   display: flex;
   align-items: center;
-  padding-bottom: 20px;
   font-size: 18px;
-  margin-left: 1rem;
+  margin-left: 0rem;
 
 }
 
 .publicationInfo {
   flex: 9;
-  align-items: flex-start; /* Aligns items to the start of the flex container, helping with text alignment */
 
+}
+.publicationItem {
+  display: flex;
+  align-items: flex-start; /* Ensures all content is aligned from the start */
+  font-size: 18px;
+  flex-wrap: wrap; /* Allows the content to wrap if needed */
 }
 
 .publicationTitle {
-  margin: 1rem;
   font-size: 28px;
   color: var(--custom-header-color);
   font-weight: bold;
-  text-align: left; /* Ensures all lines in a multi-line title align to the left */
-
-
+  text-align: left;
+  margin: 0; /* Remove margin to prevent shifting */
+  padding: 0.5rem 0; /* Optional: Adds space around the title */
+  word-wrap: break-word; /* Ensures long words break if needed */
+  width: 100%; /* Ensures the title takes up the full width */
 }
+
 
 .publicationDetails {
   margin: 1rem;
@@ -148,10 +148,10 @@
       margin: 3px;
   }
 
-  .yearSection, .yearTitle, .typeTitle, .publicationTitle, .publicationDetails {
+  .yearSection, .yearTitle, .typeTitle,  .publicationDetails {
       margin: 1rem;
   }
-
+ 
   .yearTitle {
       font-size: 20px;
   }
@@ -161,18 +161,17 @@
   }
 
   .publicationItem {
-      margin: 0.5rem;
       font-size: 14px;
   }
   .publicationItem2 {
-    margin-left: 0.5rem;
     font-size: 14px;
 }
 
   .publicationTitle {
       font-size: 16px;
       text-align: left; /* Ensures all lines in a multi-line title align to the left */
-
+      margin-top: 1.5rem;
+      margin-bottom: 1.5rem;
   }
 
   .pdfLink {
